--- a/resources/sass/sidebar.scss
+++ b/resources/sass/sidebar.scss
@@ -11,6 +11,8 @@
     overflow-x: hidden;
     overflow-y: auto;
     transition: width 0.28s ease;
+    display: flex;
+    flex-direction: column;
 }
 
 .side-navigation:hover,
@@ -23,6 +25,11 @@
     justify-content: center;
     align-items: center;
     min-height: 64px;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    padding-bottom: 0.35rem;
+    background: linear-gradient(180deg, #171a20 0%, #101318 100%);
 }
 
 .side-navigation ul {
@@ -40,6 +47,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 46px;
     border-radius: 12px;
     text-decoration: none;
     color: #aeb7cb;
@@ -65,8 +73,9 @@
 .side-navigation ul li a .side-icon {
     min-width: 46px;
     height: 46px;
-    line-height: 50px;
-    text-align: center;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .side-navigation ul li a .side-icon ion-icon { font-size: 1.15rem; }
